Israel dos Santos Aguiar 9.12. Desafio: customizando mensagens de validação

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,42 @@
 
 NotBlank={0} é obrigatório
 #NotBlank.nome=Informe um nome, porque é obrigatório
+NotNull={0} é obrigatório
+PositiveOrZero={0} é obrigatório
 
-nome=Nome
+
+#nome=Nome
+
+# Cidade
+cidade.nome=Nome da cidade
+cidade.id=Código da cidade
+
+# Cozinha
+cozinha.nome=Nome da cozinha
+cozinha.id=Código da cozinha
+
+# Estado
+estado.nome=Nome do estado
+estado.id=Código do estado
+
+# Grupo
+grupo.nome=Nome do grupo
+grupo.id=Código do grupo
+
+# Permissão
+permissao.nome=Nome da permissão
+permissao.id=Código da permissão
+
+# Produto
+produto.nome=Nome do produto
+produto.id=Código do produto
+
+# Restaurante
+NoNull.restaurante.taxaFrete={0} é obrigatória
+NoNull.restaurante.cozinha={0} é obrigatória
 restaurante.nome=Nome do restaurante
+restaurante.id=Código do restaurante
+
+# Usuário
+usuario.nome=Nome do usuario
+usuario.id=Código do usuário
