--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,9 @@
-#NotBlank.restaurante.nome=Nome do restaurante é obrigatório
-#NotBlank.cozinha.nome=Nome da cozinha é obrigatório
-
 NotBlank={0} é obrigatório
-#NotBlank.nome=Informe um nome, porque é obrigatório
 NotNull={0} é obrigatório
-PositiveOrZero={0} é obrigatório
+PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
-
-#nome=Nome
+#javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
+#TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
 
 # Cidade
 cidade.nome=Nome da cidade
