--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,9 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
-PositiveOrZero={0} deve ser um valor maior ou igual a zero
+#PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
 #javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
-#TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
+TaxaFrete.invalida={0} está inválida
 
 # Cidade
 cidade.nome=Nome da cidade
