--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
 Multiplo={0} deve ser valor múltiplo de {1}
+ValorZeroIncluiDescricao={1} deve conter {2}
 
 #javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
 TaxaFrete.invalida={0} está inválida
@@ -31,8 +32,8 @@ produto.nome=Nome do produto
 produto.id=Código do produto
 
 # Restaurante
-NoNull.restaurante.taxaFrete={0} é obrigatória
-NoNull.restaurante.cozinha={0} é obrigatória
+NotNull.restaurante.taxaFrete={0} é obrigatória
+NotNull.restaurante.cozinha={0} é obrigatória
 restaurante.nome=Nome do restaurante
 restaurante.id=Código do restaurante
 
