--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,10 +32,10 @@ produto.nome=Nome do produto
 produto.id=Código do produto
 
 # Restaurante
-NotNull.restaurante.taxaFrete={0} é obrigatória
-NotNull.restaurante.cozinha={0} é obrigatória
-restaurante.nome=Nome do restaurante
-restaurante.id=Código do restaurante
+NotNull.restauranteInput.taxaFrete={0} é obrigatória
+NotNull.restauranteInput.cozinha={0} é obrigatória
+restauranteInput.nome=Nome do restaurante
+restauranteInput.id=Código do restaurante
 
 # Usuário
 usuario.nome=Nome do usuario
