--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,3 +40,11 @@ restauranteInput.id=Código do restaurante
 # Usuário
 usuario.nome=Nome do usuario
 usuario.id=Código do usuário
+
+# Endereço
+endereco=Endereço
+endereco.logradouro=Logradouro
+endereco.cidade=Cidade
+endereco.cidade.id=Código de cidade
+endereco.cep=CEP
+endereco.bairro=Bairro
