--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
+Email={0} deve ser um endereço de e-mail válido
 Multiplo={0} deve ser valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
 
@@ -37,10 +38,6 @@ NotNull.restauranteInput.cozinha={0} é obrigatória
 restauranteInput.nome=Nome do restaurante
 restauranteInput.id=Código do restaurante
 
-# Usuário
-usuario.nome=Nome do usuario
-usuario.id=Código do usuário
-
 # Endereço
 endereco=Endereço
 endereco.logradouro=Logradouro
@@ -48,3 +45,22 @@ endereco.cidade=Cidade
 endereco.cidade.id=Código de cidade
 endereco.cep=CEP
 endereco.bairro=Bairro
+
+# Grupo
+grupoInput.nome=Nome do grupo
+
+# Usuário
+NotBlank.usuarioComSenhaInput.senha={0} é obrigatória
+usuarioComSenhaInput.nome=Nome do usuário
+usuarioComSenhaInput.email=E-mail do usuário
+usuarioComSenhaInput.senha=Senha do usuário
+
+NotBlank.usuarioInput.senha={0} é obrigatória
+usuarioInput.nome=Nome do usuário
+usuarioInput.email=E-mail do usuário
+
+# Senha
+NotBlank.senhaInput.senhaAtual={0} é obrigatória
+NotBlank.senhaInput.novaSenha={0} é obrigatória
+senhaInput.senhaAtual=Senha atual
+senhaInput.novaSenha=Nova senha
