--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,54 +2,50 @@ NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
 Email={0} deve ser um endereço de e-mail válido
-Multiplo={0} deve ser valor múltiplo de {1}
+Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
 
-#javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
-TaxaFrete.invalida={0} está inválida
-
-# Cidade
-cidade.nome=Nome da cidade
-cidade.id=Código da cidade
-
 # Cozinha
-cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
-
-# Estado
-estado.nome=Nome do estado
-estado.id=Código do estado
-
-# Grupo
-grupo.nome=Nome do grupo
-grupo.id=Código do grupo
-
-# Permissão
-permissao.nome=Nome da permissão
-permissao.id=Código da permissão
-
-# Produto
-produto.nome=Nome do produto
-produto.id=Código do produto
+cozinhaInput.id=Código da cozinha
+cozinhaInput.nome=Nome da cozinha
 
 # Restaurante
 NotNull.restauranteInput.taxaFrete={0} é obrigatória
 NotNull.restauranteInput.cozinha={0} é obrigatória
 restauranteInput.nome=Nome do restaurante
-restauranteInput.id=Código do restaurante
+restauranteInput.cozinha=Cozinha do restaurante
+restauranteInput.taxaFrete=Taxa de frete do restaurante
+restaurante.id=Código do restaurante
 
-# Endereço
+# Estado
+estado.id=Código do estado
+estadoInput.id=Código do estado
+estadoInput.nome=Nome do estado
+
+# Cidade
+cidadeInput.nome=Nome da cidade
+cidadeInput.estado=Estado da cidade
+
+# Forma de pagamento
+NotBlank.formaPagamentoInput.descricao={0} é obrigatória
+formaPagamentoInput.id=Código da forma de pagamento
+formaPagamentoInput.descricao=Descrição da forma de pagamento
+formaPagamento.id=Código da forma de pagamento
+
+# Endereco
 endereco=Endereço
 endereco.logradouro=Logradouro
+endereco.numero=Número do logradouro
 endereco.cidade=Cidade
-endereco.cidade.id=Código de cidade
+endereco.cidade.id=Código da cidade
 endereco.cep=CEP
 endereco.bairro=Bairro
 
 # Grupo
 grupoInput.nome=Nome do grupo
 
-# Usuário
+# Usuario
 NotBlank.usuarioComSenhaInput.senha={0} é obrigatória
 usuarioComSenhaInput.nome=Nome do usuário
 usuarioComSenhaInput.email=E-mail do usuário
@@ -70,3 +66,18 @@ produtoInput.nome=Nome do produto
 produtoInput.descricao=Descrição do produto
 produtoInput.preco=Preço do produto
 produtoInput.ativo=Status do produto
+
+# Pedido
+NotNull.pedidoInput.itens.produtoId=Código do produto no item é obrigatório
+NotNull.pedidoInput.itens.quantidade=Quantidade no item é obrigatório
+Size.pedidoInput.itens=O pedido deve ter pelo menos um item
+pedidoInput.restaurante=Restaurante
+pedidoInput.formaPagamento=Forma de pagamento
+pedidoInput.enderecoEntrega=Endereço de entrega
+pedidoInput.itens=Itens do pedido
+enderecoEntrega.logradouro=Logradouro do endereço de entrega
+enderecoEntrega.numero=Número do logradouro do endereço de entrega
+enderecoEntrega.cidade=Cidade do endereço de entrega
+enderecoEntrega.cidade.id=Código da cidade do endereço de entrega
+enderecoEntrega.cep=CEP do endereço de entrega
+enderecoEntrega.bairro=Bairro do endereço de entrega
