--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -89,3 +89,8 @@ pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
 pedidoFilter.dataCriacaoFim=Data final de criação do pedido
 pedidoFilter.restauranteId=Código do restaurante
 pedidoFilter.clienteId=Código do cliente
+
+# Foto Produto
+fotoProdutoInput.arquivo=Arquivo da foto
+fotoProdutoInput.descricao=Descrição da foto
+FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
