--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -94,3 +94,5 @@ pedidoFilter.clienteId=Código do cliente
 fotoProdutoInput.arquivo=Arquivo da foto
 fotoProdutoInput.descricao=Descrição da foto
 FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
+FileContentType.fotoProdutoInput.arquivo=A foto deve ser do tipo JPG ou PNG.
+
